package se.group32;

public class SimpleSumStrategy implements ImpactCalculationStategy {

}
