package se.group32.domain;

public interface ImpactCalculationStrategy {
    double calculateImpact(Product product);
}
