package se.group32.domain;

public class WeightedByLifespanStrategy implements ImpactCalculationStrategy {

}
