// Karin
package se.group32.presentation;

public interface MenuInterface {
    // MenuInterface ska innehålla metoder som sköter menyernas regler kring vilka metoder menyklassserna ska använda.
    // void run();
    // void printMenu();
}
