@startuml Grupp32

'comment
'<|-- inheritence
'*-- composition
'o-- aggregation
'--> uses(or dependency)

Title TRASHMAN(Terrific and Right Application for Swedish Humans Managing Avfall Now)


class MainMenu{
    'Motverka DIP
    -OutputFormatter OutputFormatter
    -ProductManager productManager
    -MaterialManager materialManager
    -handleInput(String choice)
    -printMenu()
    +run()
}

class ProductMenu{
    +run()
    -printMenu()
    -createProduct()
    -listProduct()
    -calculateImpact()
    -showRecyclingGuidance()
}

class MaterialMenu{
    +run()
    -printMenu()
}

class ReportMenu{
    -ProductManager productManager
    -MaterialManager materialManager
    -RecyclingGuidence recyclingGuidence
    +impactCalculation(int choice)
    +showGuidance(int choice)
    +showMaterialImpact(int choice)
}

interface MenuInterface{
    +run()
    -printMenu()
}

class MaterialManager{
    -Material[] materials
    +listMaterial()
}

class Material{
    -String name
    -int impactValue
    -RecyclingCategory recyclingCategory
}

class Product{
    -String name
    -Material[] materials
    -int lifespan
    -String category
    '+Product()
}

interface ImpactCalculationStrategy{
    +calculateImpact(Product product)
}


class RecyclingGuidence{
    +isProductRecyclable(Product product)
    +isMaterialRecyclable(Material material)
}


class SimpleSumStrategy{
    +calculateImpact(Product product)
}

class WeightedByLifespanStrategy{
    +calculateImpact(Product product)
}

class ProductManager{
    -Product[] products
    +createProduct()
    +listProducts()
    +getDetails()
    +calculateImpact(Product product)
}

class InputValidator{
    +ValidateInt(String string):boolean
}

enum MaterialCategory{
    {PLASTIC, PAPER, METAL}
}

'MainMenu
MenuInterface <-- MainMenu
MainMenu *-l- MaterialMenu
MainMenu *-r- ProductMenu

'ReportMenu
ProductMenu *-- ReportMenu
MaterialMenu *-- ReportMenu
ReportMenu "1" o-- "1" ProductManager
ReportMenu "1" o-- "1" MaterialManager

'MenuInterface
MenuInterface <-- MaterialMenu
MenuInterface <-- ProductMenu

'RecyclingGuidence
MaterialManager o-- RecyclingGuidence
ProductManager o-- RecyclingGuidence

'ProductManager
ProductManager "1" --> "many" Product
ProductManager --> ImpactCalculationStrategy

'ProductMenu
ProductMenu o-- ProductManager
ProductMenu --> InputValidator

'MaterialMenu
MaterialMenu --> InputValidator

Product "1" *-- "many" Material
Material *-- MaterialCategory

InputValidator -[hidden]-> ReportMenu

ImpactCalculationStrategy <-- WeightedByLifespanStrategy
ImpactCalculationStrategy <-- SimpleSumStrategy
